fixed alignment issues for cards

--- a/src/styles/scss/interest.scss
+++ b/src/styles/scss/interest.scss
@@ -54,3 +54,8 @@
 .interest-card-badge {
   border-radius: 0;
 }
+
+.interest-column {
+  padding-left: 0;
+  padding-right: 20px;
+}
