--- a/src/styles/scss/skill.scss
+++ b/src/styles/scss/skill.scss
@@ -60,6 +60,10 @@
 }
 
 .skill-list-card {
-  margin-right: 10px;
+  padding-right: 20px;
   margin-top: 20px;
+}
+
+.skill-value {
+  padding-left: 0;
 }
